syntax = "proto3";

package message_pubsub;

import "subkey.proto";

enum PubsubAction {
  Subscribe = 0;
  Unsubscribe = 1;
}

/**
 * Subscribe
 */
message SubscribeRequest {
  subkey.Subkey subkey = 1;
}

message SubscribeResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {}

  enum Failure {
    Unknown = 0;
    Invalid = 1;
  }
}

/**
 * Unsubscribe
 */
message UnsubscribeRequest {
  subkey.Subkey subkey = 1;
}

message UnsubscribeResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {}

  enum Failure {
    Unknown = 0;
    Invalid = 1;
  }
}
